# yorishiro

./: .env.example  .gitignore  CLA.md  README.md  config.yaml  docker-compose.yml  heartbeat.py  pyproject.toml  test_heartbeat.py
web/: .prettierrc.json  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: Composer.tsx  History.tsx  Instrument.tsx  Presence.tsx  ReachedOut.tsx  TickStrip.tsx  Voice.tsx
web/src/lib/: projection.ts  rings.ts
web/src/state/: mock.ts  real.ts  source.ts  types.ts  useHerSource.ts
