[project]
name = "yorishiro"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "openai>=2.46.0",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, B bugbear (real bugs), UP pyupgrade.
# Deliberately no D/ANN yet — docstring and annotation rules on a codebase
# this young generate noise, not information.
select = ["E", "F", "I", "B", "UP"]

# ruff format replaces black; defaults are intentional, nothing to override.

[tool.pytest.ini_options]
# her/ is the save-file, never test code. her/pgdata (the Postgres data dir
# bind-mounted by docker-compose) is owned by the container and unreadable,
# so letting collection walk into it dies on a PermissionError. Keep pytest
# out of the whole save-file dir.
addopts = "--ignore=her"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true    # pyyaml/uvicorn ship no stubs
check_untyped_defs = true        # covers the tests without annotating them
# disallow_untyped_defs stays OFF until the shape of the code settles.
